--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/Message.svg" sizes="300x300"  />
     <meta name="viewport" content="width=device-width, initial-scale=2.0" />
-    <title>Chat | Deepank</title>
+    <title>Pexel-chat | Deepank</title>
   </head>
   <body>
     <div id="root"></div>
